--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Jagan Mohan Rao",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
