--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "bn-ng-idle": "^1.0.1",
     "bootstrap": "^4.5.0",
     "bootstrap-select": "^1.13.18",
     "file-saver": "^2.0.2",
@@ -40,7 +41,7 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular-devkit/build-angular": "^0.1100.5",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@types/jasmine": "~3.5.0",
