--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "msnodesqlv8": "^2.0.2",
     "mssql": "^6.2.1"
