completed admin rights module

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 SECRET=secret
+USER=DB_A2EA4B_newerpdb_admin
+PASSWORD=abcd@1234
+SERVER=SQL5101.site4now.net
+PORT=1433
+DATABASE=DB_A2EA4B_newerpdb
