--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -32,6 +32,8 @@
     "jquery": "^3.5.1",
     "jspdf": "^2.1.1",
     "jspdf-autotable": "^3.5.13",
+    "ngx-pagination": "^5.0.0",
+    "ngx-spinner": "^10.0.1",
     "popper.js": "^1.16.1",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0-rc.1",
