--- a/angular-app/angular.json
+++ b/angular-app/angular.json
@@ -24,9 +24,10 @@
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
+              "node_modules/primeflex/primeflex.css",
               "src/styles.css"
             ],
-            "scripts": ["src/assets/js/sidebar.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -88,13 +89,10 @@
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
+              "node_modules/primeflex/primeflex.css",
               "src/styles.css"
             ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js",
-              "src/assets/js/sidebar.js"
-            ]
+            "scripts": []
           }
         },
         "lint": {
