--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -35,6 +35,7 @@
     "ngx-pagination": "^5.0.0",
     "ngx-spinner": "^10.0.1",
     "popper.js": "^1.16.1",
+    "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0-rc.1",
     "rxjs": "~6.5.5",
